nav collapse and color fixed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,8 +21,9 @@
     background-color: #0d4f77;
 }
 
-a {
-    color: #fefefe;
+.navbar-brand,
+.nav-link {
+    color: #fff;
 }
 
 .navbar-toggler {
